--- a/MusicClubManager.Ui.Mvc/Views/Shared/_Layout.cshtml
+++ b/MusicClubManager.Ui.Mvc/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div>
-            <h1><a asp-controller="Home">Music Club</a></h1>
+            <h1><a asp-controller="Home" asp-action="Index">Music Club</a></h1>
 
             <button type="button">
                 <span>&#9776;</span>
@@ -20,7 +20,7 @@
 
         <nav>
             <ul>
-                <li><a asp-controller="Agenda">Agenda</a></li>
+                <li><a asp-controller="Agenda" asp-action="Index">Agenda</a></li>
                 <li><a asp-controller="About">About</a></li>
                 <li><a asp-controller="Contact">Contact</a></li>
             </ul>
