--- a/MusicClubManager.Ui.Mvc/Views/Shared/_LineupPartial.cshtml
+++ b/MusicClubManager.Ui.Mvc/Views/Shared/_LineupPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿@model LineupResult
 
 <li>
-    <a asp-controller="Agenda" asp-route-id="@Model.Id">
+    <a asp-controller="Agenda" asp-action="Lineup" asp-route-id="@Model.Id">
         <img src="@($"https://localhost:7188/image/download/10")" alt="Demo image" />
 
         <div>
