--- a/MusicClubManager.Ui.Mvc/Views/Shared/_Layout.cshtml
+++ b/MusicClubManager.Ui.Mvc/Views/Shared/_Layout.cshtml
@@ -21,8 +21,8 @@
         <nav>
             <ul>
                 <li><a asp-controller="Agenda" asp-action="Index">Agenda</a></li>
-                <li><a asp-controller="About">About</a></li>
-                <li><a asp-controller="Contact">Contact</a></li>
+                <li><a asp-controller="About" asp-action="Index">About</a></li>
+                <li><a asp-controller="Contact" asp-action="Index">Contact</a></li>
             </ul>
         </nav>
     </header>
