create lineup w/image

--- a/MusicClubManager.Cms.Blazor/Pages/Artist/CreateCreateImage.razor
+++ b/MusicClubManager.Cms.Blazor/Pages/Artist/CreateCreateImage.razor
@@ -11,7 +11,7 @@
 
 @code {
     [CascadingParameter, EditorRequired]
-    public required CreateEditArtistContext Context { get; set; }
+    public required CreateEditLineupContext Context { get; set; }
 
     private void HandleOnSubmit(int id)
     {
