--- a/MusicClubManager.Cms.Blazor/Pages/Artist/Create.razor
+++ b/MusicClubManager.Cms.Blazor/Pages/Artist/Create.razor
@@ -12,9 +12,9 @@
 
 @if(Context.Model is not null)
 {
-    <Form TModel="IArtistFormModel" Model="Context.Model" OnValidSubmit="() => Submit(Context.Model)">
+    <Form TModel="IArtistFormModel" Model="(IArtistFormModel)Context.Model" OnValidSubmit="() => Submit((IArtistFormModel)Context.Model)">
         <Template>
-            <ArtistInputs Model="Context.Model"></ArtistInputs>
+            <ArtistInputs Model="(IArtistFormModel)Context.Model"></ArtistInputs>
 
             <div>
                 <label for="image">Image</label>
@@ -52,7 +52,7 @@
     private ServiceResult<ImageResult>? imageServiceResult;
 
     [CascadingParameter, EditorRequired]
-    public required CreateEditArtistContext Context { get; set; }
+    public required ISelectImageContext Context { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
