--- a/MusicClubManager.Cms.Blazor/Pages/Lineup/CreateCreateImage.razor
+++ b/MusicClubManager.Cms.Blazor/Pages/Lineup/CreateCreateImage.razor
@@ -13,7 +13,7 @@
 
 @code {
     [CascadingParameter, EditorRequired]
-    public required CreateEditLineupContext Context { get; set; }
+    public required ISelectImageContext Context { get; set; }
 
     private void HandleOnSubmit(int id)
     {
