--- a/MusicClubManager.Ui.Mvc/Views/Agenda/Index.cshtml
+++ b/MusicClubManager.Ui.Mvc/Views/Agenda/Index.cshtml
@@ -14,4 +14,6 @@
             <Partial name="_LineupPartial" Model="@lineupResult" />
         }
     </ul>
+
+    <Partial name="_PaginationPartial" Model="@new Pagination {Page = (int)Model.Page, PageSize = (int)Model.PageSize, TotalCount = (int)Model.TotalCount }"/>
 }
