--- a/MusicClubManager.Ui.Mvc/Views/Shared/_Layout.cshtml.css
+++ b/MusicClubManager.Ui.Mvc/Views/Shared/_Layout.cshtml.css
@@ -1,5 +1,5 @@
 ﻿header {
-    background-color: rgb(50,50,50);
+    background-color: rgb(75,75,75);
     display: flex;
     flex-direction: column;
 }
@@ -16,14 +16,21 @@
 
             header > div > h1 > ::deep a {
                 color: rgb(250,250,250);
+          /*      color: rgb(0,0,0);*/
                 flex-grow: 1;
                 padding: 16px;
                 text-decoration: none;
                 text-transform: uppercase;
             }
 
+                header > div > h1 > ::deep a.active {
+                    background-color: var(--active-color);
+                 /*   color: rgb(250,250,250);*/
+                }
+
                 header > div > h1 > ::deep a:hover {
                     background-color: rgb(40,140,240);
+               /*     color: rgb(250,250,250);*/
                 }
 
         header > div > button {
@@ -31,15 +38,18 @@
             background-color: inherit;
             border: none;
             color: rgb(250,250,250);
+     /*       color: rgb(0,0,0);*/
             cursor: pointer;
             display: flex;
             font-size: 2em;
             justify-content: center;
             padding: 16px;
+            width: 2em;
         }
 
             header > div > button:hover {
                 background-color: rgb(40,140,240);
+         /*       color: rgb(250,250,250);*/
             }
 
             header > div > button > span:last-of-type {
@@ -64,6 +74,7 @@
 
                 header > nav > ul > li > ::deep a {
                     color: rgb(250,250,250);
+               /*     color: rgb(0,0,0);*/
                     flex-grow: 1;
                     font-weight: bold;
                     padding: 16px;
@@ -71,9 +82,15 @@
                     text-transform: uppercase;
                 }
 
+                    header > nav > ul > li > ::deep a.active {
+                        background-color: var(--active-color);
+/*                        color: rgb(250,250,250);*/
+                    }
+
                     header > nav > ul > li > ::deep a:hover {
                         background-color: rgb(0,0,0);
                         background-color: rgb(40,140,240);
+           /*             color: rgb(250,250,250);*/
                     }
 
 main {
