--- a/MusicClubManager.Ui.Mvc/Views/_ViewImports.cshtml
+++ b/MusicClubManager.Ui.Mvc/Views/_ViewImports.cshtml
@@ -4,6 +4,8 @@
 @using MusicClubManager.Dto.Result
 @using MusicClubManager.Dto.Request
 @using MusicClubManager.Dto.Transfer
+@using MusicClubManager.Ui.Mvc.Extensions
+@using MusicClubManager.Ui.Mvc.Models.ViewModels
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
