--- a/MusicClubManager.Ui.Mvc/Views/Agenda/Lineup.cshtml
+++ b/MusicClubManager.Ui.Mvc/Views/Agenda/Lineup.cshtml
@@ -14,7 +14,7 @@
     }
     else
     {
-        var names = lineupResult.PagedLineupPerformanceResult.Data?.Select(x => x.ArtistResult.Name);
+        var names = lineupResult.LineupPerformanceResults.Select(x => x.ArtistResult.Name);
         if (names is not null)
         {
             ViewData["Title"] = string.Join(" + ", names.Take(3)) + (names.Count() > 3 ? $" + {names.Count() - 3} more" : "");
@@ -45,7 +45,7 @@
         <!--lineup: description prop to be added -->
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-        @foreach (var lineupPerformanceResult in lineupResult.PagedLineupPerformanceResult.Data ?? [])
+        @foreach (var lineupPerformanceResult in lineupResult.LineupPerformanceResults ?? [])
         {
             <section>
                 <img src="@($"https://localhost:7188/image/download/{lineupPerformanceResult.ArtistResult.ImageResult?.Id}")" />
