--- a/MusicClubManager.Cms.Wpf/MainWindow.xaml
+++ b/MusicClubManager.Cms.Wpf/MainWindow.xaml
@@ -4,10 +4,21 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MusicClubManager.Cms.Wpf"
+        xmlns:vms="clr-namespace:MusicClubManager.Cms.Wpf.ViewModels"
+        xmlns:views="clr-namespace:MusicClubManager.Cms.Wpf.Views"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="303,181,0,0" VerticalAlignment="Top" Click="Button_Click"/>
+    <Window.DataContext>
+        <vms:MainViewModel />
+    </Window.DataContext>
 
-    </Grid>
+    <!--<Window.Resources>
+        <DataTemplate DataType="{x:Type vms:AgendaViewModel}">
+            <views:AgendaView />
+        </DataTemplate>
+    </Window.Resources>-->
+
+    <ContentControl 
+        Content="{Binding CurrentViewModel, UpdateSourceTrigger=PropertyChanged}"
+        ContentTemplateSelector="{DynamicResource ViewModelToViewSelector}"/>
 </Window>
