--- a/MusicClubManager.Cms.Wpf/App.xaml
+++ b/MusicClubManager.Cms.Wpf/App.xaml
@@ -1,9 +1,7 @@
 ﻿<Application x:Class="MusicClubManager.Cms.Wpf.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:MusicClubManager.Cms.Wpf"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:MusicClubManager.Cms.Wpf">
     <Application.Resources>
-         
     </Application.Resources>
 </Application>
