--- a/MusicClubManager.Cms.Wpf/MainWindow.xaml
+++ b/MusicClubManager.Cms.Wpf/MainWindow.xaml
@@ -8,17 +8,16 @@
         xmlns:views="clr-namespace:MusicClubManager.Cms.Wpf.Views"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <!--<Window.DataContext>
-        <vms:MainViewModel />
-    </Window.DataContext>-->
-
-    <!--<Window.Resources>
+    <Window.Resources>
         <DataTemplate DataType="{x:Type vms:AgendaViewModel}">
             <views:AgendaView />
         </DataTemplate>
-    </Window.Resources>-->
+    </Window.Resources>
 
     <ContentControl 
+        Content="{Binding CurrentViewModel, UpdateSourceTrigger=PropertyChanged}" />
+
+    <!--<ContentControl 
         Content="{Binding CurrentViewModel, UpdateSourceTrigger=PropertyChanged}"
-        ContentTemplateSelector="{DynamicResource ViewModelToViewSelector}"/>
+        ContentTemplateSelector="{DynamicResource ViewModelToViewSelector}"/>-->
 </Window>
