--- a/MusicClubManager.Cms.Wpf/Views/AgendaView.xaml
+++ b/MusicClubManager.Cms.Wpf/Views/AgendaView.xaml
@@ -5,10 +5,64 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MusicClubManager.Cms.Wpf.Views"
              xmlns:vm="clr-namespace:MusicClubManager.Cms.Wpf.ViewModels" 
+             xmlns:c="clr-namespace:MusicClubManager.Cms.Wpf.Converters"
              mc:Ignorable="d" 
              d:DataContext="{d:DesignInstance Type=vm:AgendaViewModel}"
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-        <DataGrid ItemsSource="{Binding Data}"></DataGrid>
-    </Grid>
+    <UserControl.Resources>
+        <c:ImageConverter x:Key="ImageConverter"/>
+
+        <CollectionViewSource x:Key='src' 
+                      Source="{Binding Data}">
+            <CollectionViewSource.GroupDescriptions>
+                <PropertyGroupDescription PropertyName="LineupResult.Doors" />
+            </CollectionViewSource.GroupDescriptions>
+        </CollectionViewSource>
+    </UserControl.Resources>
+    
+    <StackPanel Orientation="Horizontal" >
+        <StackPanel>
+            <ListView ItemsSource="{Binding Source={StaticResource src}}" x:Name="ListView">
+                <ListView.GroupStyle>
+                    <GroupStyle>
+                        <GroupStyle.HeaderTemplate>
+                            <DataTemplate>
+                                <TextBlock FontWeight="Bold" FontSize="14" Text="{Binding Name}"/>
+                            </DataTemplate>
+                        </GroupStyle.HeaderTemplate>
+                    </GroupStyle>
+                </ListView.GroupStyle>
+
+                <ListView.View>
+                    <GridView>
+                        <GridViewColumn Header="Date" DisplayMemberBinding="{Binding Start, StringFormat=\{0:dd.MM.yy\}}" />
+
+                        <GridViewColumn Header="Start" DisplayMemberBinding="{Binding Start, StringFormat=\{0:HH:mm\}}" />
+
+                        <GridViewColumn Header="Artist" DisplayMemberBinding="{Binding ArtistResult.Name}"/>
+                    </GridView>
+                </ListView.View>
+            </ListView>
+
+            <!--<ListView ItemsSource="{Binding Data}" x:Name="ListView">
+                <ListView.View>
+                    <GridView>
+                        <GridViewColumn Header="Date" DisplayMemberBinding="{Binding Start, StringFormat=\{0:dd.MM.yy\}}" />
+
+                        <GridViewColumn Header="Start" DisplayMemberBinding="{Binding Start, StringFormat=\{0:HH:mm\}}" />
+
+                        <GridViewColumn Header="Artist" DisplayMemberBinding="{Binding ArtistResult.Name}"/>
+                    </GridView>
+                </ListView.View>
+            </ListView>-->
+        </StackPanel>
+
+        <StackPanel>
+            <TextBox Text="{Binding Path=SelectedItem.ArtistResult.Name, ElementName=ListView, UpdateSourceTrigger=PropertyChanged}" />
+
+            <Image Source="{Binding Path=SelectedItem.ArtistResult.ImageResult.Id, ElementName=ListView, Converter={StaticResource ImageConverter}}" ></Image>
+
+            <!--<Button Content="SAVE" Command="{Binding UpdateCommand}" CommandParameter="{Binding Path=SelectedItem, ElementName=ListView}" />-->
+        </StackPanel>
+    </StackPanel>
 </UserControl>
